<resources>
    <string name="app_name">Sarins Cafe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="cafe_name">SARINS CAFE</string>
    <string name="cafe_tag_line">A PLACE OF YOUR CHOICE</string>
    <string name="cafe_address">RC &amp; SONS BPCL DEALER\nJUNCTION ROAD,\nMATHURA</string>
    <string name="offers">Offers</string>
    <string name="feedback">Feedback</string>
    <string name="contact">Contact</string>
    <string name="orders">Orders</string>
    <string name="cafe_menu">Cafe Menu</string>
</resources>
