<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/offers" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/orders" />
        <item
            android:id="@+id/nav_cafe_menu"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/cafe_menu" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="TBD" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/contact" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/feedback" />
        </menu>
    </item>

</menu>
